--- a/public/add.html
+++ b/public/add.html
@@ -8,32 +8,32 @@
 </head>
 <body>
     <header>
-        <h1>Add Expense</h1>
+        <h1>เพิ่มค่าใช้จ่าย</h1>
         <nav>
-            <a href="/">Home</a>
-            <a href="/add">Add Expense</a>
-            <a href="/dashboard">Dashboard</a>
+            <a href="/">หน้าแรก</a>
+            <a href="/add">เพิ่มค่าใช้จ่าย</a>
+            <a href="/dashboard">แดชบอร์ด</a>
         </nav>
     </header>
     <main>
         <form id="add-expense-form">
-            <label for="item">Item:</label>
+            <label for="item">รายการ:</label>
             <input type="text" id="item" name="item" required>
-            <label for="amount">Amount:</label>
+            <label for="amount">จำนวนเงิน:</label>
             <input type="number" id="amount" name="amount" step="0.01" required>
-            <label for="expense_date">Date:</label>
+            <label for="expense_date">วันที่:</label>
             <input type="date" id="expense_date" name="expense_date" required>
-            <label for="category">Category:</label>
+            <label for="category">หมวดหมู่:</label>
             <select id="category" name="category" required>
-                <option value="" disabled selected>Select a category</option>
-                <option value="Food">Food</option>
-                <option value="Transport">Transport</option>
-                <option value="Shopping">Shopping</option>
-                <option value="Bills">Bills</option>
-                <option value="Entertainment">Entertainment</option>
-                <option value="Other">Other</option>
+                <option value="" disabled selected>เลือกหมวดหมู่</option>
+                <option value="อาหาร">🍽️ อาหาร</option>
+                <option value="เดินทาง">🚗 เดินทาง</option>
+                <option value="ซื้อของ">🛍️ ซื้อของ</option>
+                <option value="ค่าบิล">📋 ค่าบิล</option>
+                <option value="บันเทิง">🎬 บันเทิง</option>
+                <option value="อื่นๆ">📝 อื่นๆ</option>
             </select>
-            <button type="submit">Add Expense</button>
+            <button type="submit">เพิ่มค่าใช้จ่าย</button>
         </form>
         
         <h2>สแกนรูปภาพ</h2>
