--- a/public/profile.html
+++ b/public/profile.html
@@ -5,224 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ข้อมูลส่วนตัว - Expense Tracker</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <style>
-        .profile-container {
-            max-width: 600px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-        }
-
-        .profile-card {
-            background: white;
-            border-radius: 16px;
-            padding: 2rem;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-            margin-bottom: 2rem;
-        }
-
-        .profile-header {
-            text-align: center;
-            margin-bottom: 2rem;
-            padding-bottom: 1rem;
-            border-bottom: 2px solid #f0f0f0;
-        }
-
-        .profile-avatar {
-            font-size: 4rem;
-            margin-bottom: 1rem;
-        }
-
-        .profile-title {
-            color: #333;
-            font-size: 1.5rem;
-            margin: 0;
-        }
-
-        .profile-form {
-            display: flex;
-            flex-direction: column;
-            gap: 1.5rem;
-        }
-
-        .form-group {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .form-group label {
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 0.5rem;
-        }
-
-        .form-input {
-            padding: 1rem;
-            border: 2px solid #e0e0e0;
-            border-radius: 12px;
-            font-size: 1rem;
-            transition: all 0.3s ease;
-        }
-
-        .form-input:focus {
-            outline: none;
-            border-color: #ff7300;
-            box-shadow: 0 0 0 3px rgba(255, 115, 0, 0.1);
-        }
-
-        .form-input:disabled {
-            background: #f5f5f5;
-            cursor: not-allowed;
-        }
-
-        .profile-actions {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            margin-top: 2rem;
-        }
-
-        .btn {
-            padding: 1rem;
-            border: none;
-            border-radius: 12px;
-            font-size: 1rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            text-align: center;
-            display: inline-block;
-        }
-
-        .btn-primary {
-            background: #ff7300;
-            color: white;
-        }
-
-        .btn-primary:hover {
-            background: #e65c00;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(255, 115, 0, 0.4);
-        }
-
-        .btn-secondary {
-            background: #6c757d;
-            color: white;
-        }
-
-        .btn-secondary:hover {
-            background: #5a6268;
-            transform: translateY(-2px);
-        }
-
-        .btn-danger {
-            background: #dc3545;
-            color: white;
-        }
-
-        .btn-danger:hover {
-            background: #c82333;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(220, 53, 69, 0.4);
-        }
-
-        .btn:disabled {
-            background: #ccc;
-            cursor: not-allowed;
-            transform: none;
-        }
-
-        .profile-stats {
-            background: linear-gradient(135deg, #ff7300, #ff9500);
-            color: white;
-            border-radius: 16px;
-            padding: 1.5rem;
-            text-align: center;
-        }
-
-        .stats-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-            gap: 1rem;
-            margin-top: 1rem;
-        }
-
-        .stat-item {
-            text-align: center;
-        }
-
-        .stat-number {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 0.25rem;
-        }
-
-        .stat-label {
-            font-size: 0.9rem;
-            opacity: 0.9;
-        }
-
-        .password-section {
-            border-top: 2px solid #f0f0f0;
-            padding-top: 2rem;
-            margin-top: 2rem;
-        }
-
-        .password-section h3 {
-            color: #333;
-            margin-bottom: 1rem;
-        }
-
-        .danger-zone {
-            border: 2px solid #dc3545;
-            border-radius: 12px;
-            padding: 1.5rem;
-            margin-top: 2rem;
-            background: #fff5f5;
-        }
-
-        .danger-zone h3 {
-            color: #dc3545;
-            margin: 0 0 1rem 0;
-        }
-
-        .danger-zone p {
-            color: #666;
-            margin-bottom: 1rem;
-        }
-
-        @media (max-width: 768px) {
-            .profile-container {
-                margin: 1rem auto;
-            }
-
-            .profile-card {
-                padding: 1.5rem;
-            }
-
-            .profile-actions {
-                gap: 0.75rem;
-            }
-
-            .stats-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-    </style>
 </head>
 <body>
     <header>
         <h1>ข้อมูลส่วนตัว</h1>
-        <nav>
-            <a href="/">หน้าแรก</a>
-            <a href="/add">เพิ่มค่าใช้จ่าย</a>
-            <a href="/dashboard">แดชบอร์ด</a>
-        </nav>
-        <div class="user-info">
-            <span id="user-welcome"></span>
-            <button id="logout-btn" class="logout-btn">ออกจากระบบ</button>
-        </div>
     </header>
 
     <main class="profile-container">
@@ -304,9 +94,13 @@
 
             <!-- Danger Zone -->
             <div class="danger-zone">
-                <h3>⚠️ Danger Zone</h3>
-                <p>การดำเนินการในส่วนนี้ไม่สามารถย้อนกลับได้</p>
-                <button id="logout-account-btn" class="btn btn-danger">
+                <h3>⚠️ พื้นที่อันตราย</h3>
+                <p>การดำเนินการในส่วนนี้ไม่สามารถย้อนกลับได้ และข้อมูลทั้งหมดของคุณจะถูกลบอย่างถาวร</p>
+                <button id="delete-account-btn" class="btn btn-danger">🗑️ ลบบัญชีผู้ใช้</button>
+            </div>
+
+            <div class="profile-actions" style="margin-top: 1rem;">
+                <button id="logout-account-btn" class="btn btn-secondary">
                     🚪 ออกจากระบบ
                 </button>
             </div>
@@ -336,7 +130,6 @@
                     // Fill form fields
                     document.getElementById('username').value = user.username;
                     document.getElementById('email').value = user.email;
-                    document.getElementById('user-welcome').textContent = `สวัสดี, ${user.username}`;
                     
                     // Format created date
                     if (user.created_at) {
@@ -372,10 +165,13 @@
         }
 
         function initializeAuth() {
-            const logoutBtns = document.querySelectorAll('#logout-btn, #logout-account-btn');
+            const logoutBtns = document.querySelectorAll('#logout-account-btn');
             logoutBtns.forEach(btn => {
                 btn.addEventListener('click', logout);
             });
+
+            const deleteBtn = document.getElementById('delete-account-btn');
+            deleteBtn.addEventListener('click', handleAccountDelete);
         }
 
         function initializeForms() {
@@ -419,9 +215,6 @@
                         icon: 'success',
                         confirmButtonColor: '#ff7300'
                     });
-                    
-                    // Update welcome message
-                    document.getElementById('user-welcome').textContent = `สวัสดี, ${profileData.username}`;
                 } else {
                     throw new Error(result.error || 'เกิดข้อผิดพลาดในการอัปเดต');
                 }
@@ -500,6 +293,68 @@
             }
         }
 
+        async function handleAccountDelete() {
+            const { value: confirmation } = await Swal.fire({
+                title: 'คุณแน่ใจหรือไม่?',
+                text: "การลบบัญชีผู้ใช้เป็นการกระทำถาวรและไม่สามารถกู้คืนได้!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#dc3545',
+                cancelButtonColor: '#6c757d',
+                confirmButtonText: 'ใช่, ฉันต้องการลบ!',
+                cancelButtonText: 'ยกเลิก'
+            });
+
+            if (!confirmation) {
+                return;
+            }
+
+            const { value: username } = await Swal.fire({
+                title: 'ยืนยันการลบ',
+                html: `โปรดพิมพ์ชื่อผู้ใช้ของคุณ (<b>${document.getElementById('username').value}</b>) เพื่อยืนยันการลบบัญชี`,
+                input: 'text',
+                inputPlaceholder: 'พิมพ์ชื่อผู้ใช้ของคุณที่นี่',
+                showCancelButton: true,
+                confirmButtonText: 'ยืนยันการลบ',
+                cancelButtonText: 'ยกเลิก',
+                confirmButtonColor: '#dc3545',
+                inputValidator: (value) => {
+                    if (!value || value !== document.getElementById('username').value) {
+                        return 'ชื่อผู้ใช้ไม่ถูกต้อง!'
+                    }
+                }
+            });
+
+            if (username) {
+                try {
+                    const response = await fetch('/api/auth/delete-account', {
+                        method: 'DELETE'
+                    });
+
+                    if (response.status === 200 || response.status === 204) { // Check for success or no content
+                        await Swal.fire({
+                            title: 'ลบบัญชีสำเร็จ',
+                            text: 'บัญชีของคุณถูกลบเรียบร้อยแล้ว',
+                            icon: 'success',
+                            showConfirmButton: false,
+                            timer: 2000
+                        });
+                        window.location.href = '/register';
+                    } else {
+                        let errorResult = { error: 'เกิดข้อผิดพลาดในการลบบัญชี' };
+                        try {
+                            errorResult = await response.json();
+                        } catch (e) {
+                            console.error('Could not parse error JSON:', e);
+                        }
+                        throw new Error(errorResult.error);
+                    }
+                } catch (error) {
+                    Swal.fire('เกิดข้อผิดพลาด!', error.message, 'error');
+                }
+            }
+        }
+
         function logout() {
             Swal.fire({
                 title: 'ออกจากระบบ?',
@@ -537,5 +392,11 @@
             });
         }
     </script>
+    <nav>
+        <a href="/">หน้าแรก</a>
+        <a href="/add">เพิ่มค่าใช้จ่าย</a>
+        <a href="/dashboard">แดชบอร์ด</a>
+        <a href="/profile">ข้อมูลส่วนตัว</a>
+    </nav>
 </body>
 </html>
