--- a/public/register.html
+++ b/public/register.html
@@ -5,178 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>สมัครสมาชิก - Expense Tracker</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <style>
-        .auth-container {
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: linear-gradient(135deg, #ff9500 0%, #ff7300 100%);
-            padding: 1rem;
-        }
-
-        .auth-card {
-            background: white;
-            border-radius: 20px;
-            padding: 2.5rem;
-            width: 100%;
-            max-width: 400px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.15);
-            text-align: center;
-        }
-
-        .auth-logo {
-            font-size: 4rem;
-            margin-bottom: 1rem;
-        }
-
-        .auth-title {
-            color: #333;
-            font-size: 1.8rem;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-        }
-
-        .auth-subtitle {
-            color: #666;
-            margin-bottom: 2rem;
-        }
-
-        .auth-form {
-            display: flex;
-            flex-direction: column;
-            gap: 1.5rem;
-            text-align: left;
-        }
-
-        .form-group {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .form-group label {
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 0.5rem;
-        }
-
-        .form-input {
-            padding: 1rem;
-            border: 2px solid #e0e0e0;
-            border-radius: 12px;
-            font-size: 1rem;
-            transition: all 0.3s ease;
-        }
-
-        .form-input:focus {
-            outline: none;
-            border-color: #ff7300;
-            box-shadow: 0 0 0 3px rgba(255, 115, 0, 0.1);
-        }
-
-        .form-input.valid {
-            border-color: #28a745;
-        }
-
-        .form-input.invalid {
-            border-color: #dc3545;
-        }
-
-        .auth-btn {
-            background: #ff7300;
-            color: white;
-            border: none;
-            padding: 1rem;
-            border-radius: 12px;
-            font-size: 1.1rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            margin-top: 1rem;
-        }
-
-        .auth-btn:hover {
-            background: #e65c00;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(255, 115, 0, 0.4);
-        }
-
-        .auth-btn:disabled {
-            background: #ccc;
-            cursor: not-allowed;
-            transform: none;
-        }
-
-        .auth-link {
-            margin-top: 1.5rem;
-            text-align: center;
-        }
-
-        .auth-link a {
-            color: #ff7300;
-            text-decoration: none;
-            font-weight: 500;
-        }
-
-        .auth-link a:hover {
-            text-decoration: underline;
-        }
-
-        .error-message {
-            background: #ffebee;
-            color: #d32f2f;
-            padding: 1rem;
-            border-radius: 8px;
-            margin-bottom: 1rem;
-            text-align: center;
-        }
-
-        .success-message {
-            background: #e8f5e8;
-            color: #2e7d32;
-            padding: 1rem;
-            border-radius: 8px;
-            margin-bottom: 1rem;
-            text-align: center;
-        }
-
-        .field-error {
-            color: #dc3545;
-            font-size: 0.85rem;
-            margin-top: 0.25rem;
-        }
-
-        .password-strength {
-            font-size: 0.85rem;
-            margin-top: 0.25rem;
-            padding: 0.5rem;
-            border-radius: 4px;
-        }
-
-        .password-strength.weak {
-            background: #ffebee;
-            color: #d32f2f;
-        }
-
-        .password-strength.medium {
-            background: #fff3e0;
-            color: #f57c00;
-        }
-
-        .password-strength.strong {
-            background: #e8f5e8;
-            color: #2e7d32;
-        }
-
-        @media (max-width: 480px) {
-            .auth-card {
-                padding: 1.5rem;
-            }
-        }
-    </style>
 </head>
-<body>
+<body class="auth-page">
     <div class="auth-container">
         <div class="auth-card">
             <div class="auth-logo">💰</div>
